[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
ark-pallas = { git = "https://github.com/NilFoundation/arkworks-curves.git", branch = "master", default-features = false, features = [ "zkllvm" ] }
ark-curve25519 = { git = "https://github.com/NilFoundation/arkworks-curves.git", branch = "master", default-features = false, features = [ "zkllvm" ] }
