[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
# ark-ff = { git = "https://github.com/NilFoundation/arkworks-algebra.git", features = [ "zkllvm" ] }
# ark-pallas = { git = "https://github.com/NilFoundation/arkworks-curves.git", features = [ "zkllvm" ] }
# ark-curve25519 = { git = "https://github.com/NilFoundation/arkworks-curves.git", features = [ "zkllvm" ] }
